--- a/web/ExamMe/home.html
+++ b/web/ExamMe/home.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/vue-router@3/dist/vue-router.js"></script>   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script type="module" src="app.js"></script>
 </head>
 <body>
